--- a/index.html
+++ b/index.html
@@ -15,12 +15,68 @@
   <meta charset="utf-8" />
 
 </head>
+<style>
+  body {
+    padding: 0;
+    margin: 0;
+    font-family: Montserrat, Arial, sans-serif;
+  }
+
+  #iframe-container {
+    position: relative;
+    border: 1px solid #ccc;
+    overflow: hidden;
+  }
+
+  iframe {
+    width: 100%;
+    height: 100%;
+    border: none;
+    transition: filter 0.3s ease;
+    filter: blur(3px);
+  }
+
+  button {
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    padding: 8px 16px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 14px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 4px;
+  }
+
+  button:hover {
+    background-color: #45a049;
+  }
+
+  input {
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+  }
+
+  .controls {
+    margin-top: 10px;
+  }
+
+  .slider-container {
+    margin-bottom: 10px;
+  }
+</style>
 
 <body>
   <main>
   </main>
   <script src="sketch.js"></script>
-  <script src="myopia.js"></script>
+  <!-- <script src="site-embeddinging.js"></script> -->
+  <!-- <script src="cataract.js"></script> -->
+  <!-- <script src="astigmatism.js"></script> -->
+  <!-- <script src="myopia.js"></script> -->
   <!-- <script src="tracking.js"></script> -->
   <script src="tracking-mediapipe.js"></script>
 </body>
